Fixed the page's structure and spacing

--- a/css/style.css
+++ b/css/style.css
@@ -1,30 +1,38 @@
-.whole-page{
-display: flex;
-}
+/*Import Component Designs*/
+@import url("components/avatar.css");
+@import url("components/button.css");
+@import url("components/searchbar.css");
+@import url("components/nav.css");
+@import url("components/logo.css");
+@import url("components/footer.css");
+@import url("components/main.css");
 
 body{
-	font-family: arial, sans-serif;
-	font-size: 13px;
+  font-family: arial, sans-serif;
 }
 
-.nav-bar{
-	justify-content: space-between;
-	
+.page{
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
-ul{
-
+button{
+	    background-image: -webkit-linear-gradient(top,#f8f9fa,#f8f9fa);
+    background-color: #f8f9fa;
+    border: 1px solid #f8f9fa;
+    border-radius: 4px;
+    color: #3c4043;
+    font-family: arial,sans-serif;
+    font-size: 14px;
+    margin: 11px 4px;
+    padding: 0 16px;
+    line-height: 27px;
+    height: 36px;
+    min-width: 54px;
+    text-align: center;
+    cursor: pointer;
+    user-select: none;
 }
 
-li{
-	display: inline;
-}
-
-a{
-	color: black;
-	text-decoration: none;
-}
-
-a:hover{
-	text-decoration: underline;
-}
